<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
        <item
            android:id="@+id/meeting_filter"
            app:showAsAction="ifRoom"
            tools:ignore="MenuTitle"
            android:background="@color/white"
            >
                <menu>
                        <item
                            android:id="@+id/nav_your_lunch"
                            android:icon="@drawable/ic_baseline_restaurant_menu_24"
                            android:title="@string/your_lunch"
                            android:textColor="@color/white"
                            />
                        <item
                            android:id="@+id/nav_settings"
                            android:icon="@drawable/ic_baseline_settings_24"
                            android:title="@string/settings"
                            android:textColor="@color/white"
                            />
                        <item
                            android:id="@+id/nav_logout"
                            android:icon="@drawable/ic_baseline_power_settings_new_24"
                            android:title="@string/logout"
                            android:textColor="@color/white"
                            />
                </menu>


        </item>


</menu>