<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/restaurant_map_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/go_to_restaurant_selection"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:background="@drawable/ic_baseline_location_on_24"


            />

        <TextView
            android:id="@+id/text_view_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/restaurant_name"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/restaurant_map_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_restaurant_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/restaurant_address"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/restaurant_map_icon"
            app:layout_constraintTop_toBottomOf="@+id/text_view_restaurant_name"/>




        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/go_to_restaurant_selection"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/go_to_restaurant_selection"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:background="@drawable/ic_baseline_arrow_outward_24"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>